# EA872

./: .gitignore  .gitmodules  README.md
exercicios/ex1/: ex1.c  ex1.cpp  ex1c  ex1cpp
exercicios/ex2/: main  main.cpp  massa.cpp  massa.h  mola.cpp  plot.py  sistema.cpp  sistema.h
exercicios/ex2/App/: main.cpp
exercicios/ex2/Controllers/sistema/: sistema.h
exercicios/ex2/Models/amortecedor/: amortecedor.cpp
exercicios/ex3/: CMakeLists.txt  Makefile  main
exercicios/ex3/App/: CMakeCache.txt  MMA  Makefile  cmake_install.cmake  main.cpp
exercicios/ex3/Controllers/sistema/: sistema.cpp  sistema.hpp
exercicios/ex3/Include/Models/amortecedor/: amortecedor.hpp
exercicios/ex3/Models/amortecedor/: amortecedor.cpp
exercicios/ex3/Models/massa/: massa.cpp
exercicios/ex3/Models/mola/: mola.cpp  mola.hpp
exercicios/ex3/Models/teclado/: teclado.cpp  teclado.hpp
exercicios/ex3/Models/textura/: textura.cpp  textura.hpp
exercicios/ex3/Views/: view.cpp  view.hpp
exercicios/ex3/src/Controllers/sistema/: sistema.cpp
exercicios/ex3/src/Models/amortecedor/: amortecedor.cpp
exercicios/ex3/src/Models/massa/: massa.cpp
exercicios/ex3/src/Models/mola/: mola.cpp
exercicios/ex3/src/Models/textura/: textura.cpp
exercicios/ex3/src/Views/: view.cpp
trabalho/: CMakeLists.txt  Makefile  README.md  config.txt  save.txt
trabalho/App/: client.cpp  server.cpp
trabalho/Include/Controllers/imageprocessing/: imageprocessing.hpp
trabalho/Include/Controllers/jogo/: jogo.hpp
trabalho/Include/Controllers/servidor/: servidor.hpp
trabalho/Include/Controllers/timer/: timer.hpp
trabalho/Include/Models/bolinha/: bolinha.hpp
trabalho/Include/Models/cenarioJogo/: cenarioJogo.hpp
trabalho/Include/Models/personagem/: personagem.hpp
trabalho/Include/Models/textura/: textura.hpp
trabalho/Include/Views/: view.hpp
trabalho/src/Controllers/imageprocessing/: imageprocessing.cpp
trabalho/src/Controllers/jogo/: jogo.cpp
trabalho/src/Controllers/servidor/: servidor.cpp
trabalho/src/Controllers/timer/: timer.cpp
trabalho/src/Models/bolinha/: bolinha.cpp
trabalho/src/Models/cenarioJogo/: cenarioJogo.cpp
trabalho/src/Models/personagem/: personagem.cpp
trabalho/src/Models/teclado/: teclado.cpp
trabalho/src/Views/: view.cpp
